<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>


    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <string name="supplier_unknown">Unknown</string>
    <string name="supplier_amazon">Amazon</string>
    <string name="supplier_ebay">Ebay</string>
    <string name="supplier_souq">Souq</string>
    <string name="product_overview">Overview</string>
    <string name="product_name_hint">Product Name</string>
    <string name="product_price_hint">Product Price</string>
    <string name="product_quantity_hint">Product Quantity</string>
    <string name="supplier_info">Supplier Info</string>
    <string name="product_supplier_phone_number_hint">Product Supplier phone number</string>
    <string name="product_price">price</string>
    <string name="product_quantity">quantity</string>
    <string name="empty_view_text">get Started by add a product</string>
    <string name="deleted_all_products_message">All rows deleted from product table</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="delete_all_dialog_msg">delete all this products?</string>
    <string name="quantity_change_msg">quantity was changed</string>
    <string name="quantity_finish_msg">product was finished buy another product</string>
    <string name="insert_failed">insert failed</string>
    <string name="insert_successful">insert successful</string>
    <string name="update_failed">update failed</string>
    <string name="delete_product_failed">delete product failed</string>
    <string name="delete_product_successful">delete product successful</string>
    <string name="delete_dialog_msg">delete this product</string>
    <string name="product_price_currency">LE</string>
    <string name="add_product">add product</string>
    <string name="edit_product">edit product</string>
    <string name="product_name_requires">product name required</string>
    <string name="price_requires">product price required</string>
    <string name="quantity_requires">product quantity required</string>
    <string name="supplier_name_requires">supplier name reauired</string>
    <string name="supplier_phone_requires">supplier phone required</string>
    <string name="update_successful">update successfull</string>
    <string name="unsaved_changes_dialog_msg">unsaved this changes ?</string>
    <string name="discard">discard</string>
    <string name="keep_editing">keep editing</string>
    <string name="product_view">Product view Details</string>


</resources>
